# DBGA

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  flowchart.DOT  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: testing.yml
src/: adaptive_debruijn.py  aln_compare.py  datasampler.py  debruijn.py  debruijn_msa.py  debruijn_pairwise.py  kmersize.py  utils.py
src/dbga/: __init__.py  adaptive_debruijn.py  cli.py  debruijn_msa.py  debruijn_pairwise.py  kmersize.py  main.py  utils.py
tests/: conftest.py  test_adaptive_debruijn.py  test_debruijn.py  test_debruijn_msa.py  test_debruijn_pairwise.py  test_utils.py
tests/data/: both_end_duplicate.fasta  bubble_consecutive_duplicate.fasta  duplicate_in_stem.fasta  duplicate_kmer_in_bubble.fasta  duplicate_unbalanced_end.fasta  edge_case1.fasta  edge_case2.fasta  ex1.fasta  ex2.fasta  ex3.fasta  ex4.fasta  ex5.fasta  ex6.fasta  ex7.fasta  gap_at_end.fasta  gap_at_start.fasta  gap_bubble_duplicate.fasta  kmer_mutation_lcs_fail.fasta  msa_example1.fasta  msa_example2.fasta  msa_example3.fasta  msa_example4.fasta  msa_example5.fasta  substitution_middle.fasta  unbalanced_end_w_duplicate.fasta  unrelated_sequences.fasta
