[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dbga"
authors = [
    { name = "Xingjian Leng", email = "xingjian.leng@anu.edu.au"},
]
keywords = ["biology", "genomics", "pairwise sequence alignment", "multiple sequence alignment"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop",
    "click",
    "graphviz",
    "pytest",
    "pytest-cov",
]
classifiers = [
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
    ]
# the following are inferred from the source code
dynamic = ["version", "description"]

[project.sdist]
include = ["src/*", "pyproject.toml"]

[project.scripts]
dbga = "dbga.cli:main"

[tool.pytest.ini_options]
addopts = ["--strict-config", "-ra"]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ["py39"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
